fix(header): added a positive z-index to the close btn on mobile menu for small screen

--- a/tegel/src/components/header/header.scss
+++ b/tegel/src/components/header/header.scss
@@ -237,6 +237,7 @@ html,
         left: auto;
         right: 0;
         border-right: none;
+        z-index: 1;
       }
 
       &::before {
